--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,13 +1,11 @@
 :root {
-  --background: #ffffff;
+  --background: #333333;
   --foreground: #171717;
+  --font-montserrat: "Montserrat", sans-serif;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+* {
+  font-family: var(--font-montserrat);
 }
 
 html,
@@ -19,12 +17,12 @@ body {
 body {
   color: var(--foreground);
   background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font-family: var(--font-montserrat), sans-serif;
 }
 
-* {
+*,
+*::before,
+*::after {
   box-sizing: border-box;
   padding: 0;
   margin: 0;
@@ -35,8 +33,6 @@ a {
   text-decoration: none;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
+.montserrat {
+  font-family: "Montserrat", sans-serif;
 }
